name:           hs-git-tools
version:        0.1.0.0
description:    Tools for inspecting and altering git repositories
homepage:       https://github.com/concert/hs-git-tools#readme
bug-reports:    https://github.com/concert/hs-git-tools/issues
author:         Concert Audio Technologies Limited
maintainer:     development@concertdaw.co.uk
copyright:      2018 Concert Audio Technologies Limited
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/concert/hs-git-tools

library
  hs-source-dirs:
      src
  ghc-options:
      -Wall -XOverloadedStrings -XScopedTypeVariables -XTypeApplications
      -XTupleSections
  build-depends:
      base >=4.7 && <5
    , async
    , attoparsec
    , attoparsec-binary
    , base16-bytestring
    , blaze-builder
    , bytestring
    , containers
    , cryptohash
    , directory
    , either
    , filepath
    , mmap
    , mtl
    , tagged
    , temporary
    , text
    , time
    , unix
    , utf8-string
    , zlib
  exposed-modules:
      Git
    , Git.Pack
    , Git.Pack.Index
    , Git.Pack.Pack
    , Git.Serialise
    , Git.Store
    , Git.Types
    , Git.Types.Error
    , Git.Types.Internal
    , Git.Types.Objects
    , Git.Types.Sha1
    , Git.Types.SizedByteString
    , Lib
  other-modules:
      Paths_hs_git_tools
  default-language: Haskell2010

executable hs-git-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -XOverloadedStrings
  build-depends:
      base >=4.7 && <5
    , hs-git-tools
  other-modules:
      Paths_hs_git_tools
  default-language: Haskell2010

test-suite hs-git-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -XOverloadedStrings
  build-depends:
      base >=4.7 && <5
    , hs-git-tools
    , attoparsec
    , bytestring
    , knob
    , hspec
  other-modules:
      Git.SerialiseSpec
      Git.Types.SizedByteStringSpec
      Paths_hs_git_tools
  default-language: Haskell2010
