name:           hs-git-tools
version:        0.1.0.0
description:    Tools for inspecting and altering git repositories
homepage:       https://github.com/concert/hs-git-tools#readme
bug-reports:    https://github.com/concert/hs-git-tools/issues
author:         Concert Audio Technologies Limited
maintainer:     development@concertdaw.co.uk
copyright:      2018 Concert Audio Technologies Limited
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/concert/hs-git-tools

library
  hs-source-dirs:
      src
  ghc-options:
      -Wall
  default-extensions:
      OverloadedStrings
    , ScopedTypeVariables
    , TupleSections
    , TypeApplications
  build-depends:
      base >=4.7 && <5
    , async
    , attoparsec
    , attoparsec-binary
    , base16-bytestring
    , blaze-builder
    , bytestring
    , containers
    , cryptohash
    , mmap
    , mtl
    , pathtype
    , tagged
    , temporary
    , text
    , time
    , unix
    , utf8-string
    , zlib
  exposed-modules:
      Git
    , Git.Index
    , Git.Index.Extensions
    , Git.Index.Extensions.CachedTree
    , Git.Index.Extensions.Class
    , Git.Index.Extensions.ResolveUndo
    , Git.Index.Parser
    , Git.Index.Types
    , Git.Internal
    , Git.Objects
    , Git.Objects.Blob
    , Git.Objects.Commit
    , Git.Objects.GitObject
    , Git.Objects.Object
    , Git.Objects.Serialise
    , Git.Objects.Tag
    , Git.Objects.Tree
    , Git.Pack
    , Git.Pack.Delta
    , Git.Pack.Index
    , Git.Pack.Pack
    , Git.Pack.PackSet
    , Git.Refs
    , Git.Repository
    , Git.Sha1
    , Git.Store
    , Git.Types
    , Git.Types.Error
  other-modules:
      Paths_hs_git_tools
  default-language: Haskell2010

executable hs-git-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -XOverloadedStrings
  build-depends:
      base >=4.7 && <5
    , hs-git-tools
  other-modules:
      Paths_hs_git_tools
  default-language: Haskell2010

test-suite hs-git-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-extensions:
      OverloadedStrings
    , ScopedTypeVariables
    , TupleSections
    , TypeApplications
  build-depends:
      base >=4.7 && <5
    , hs-git-tools
    , attoparsec
    , bytestring
    , containers
    , mtl
    , pathtype
    , tagged
    , text
    , time
    , hspec
    , QuickCheck
    , quickcheck-instances
  other-modules:
      Git.Index.ParserSpec
      Git.Objects.SerialiseSpec
      Git.Pack.DeltaSpec
      Git.Pack.PackSpec
      Git.Sha1Spec
      Paths_hs_git_tools
  default-language: Haskell2010
